--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -387,12 +387,12 @@
     }
   },
   "signIn": {
-    "heroEyebrow": "Join the pack",
-    "heroHeadline": "Lead your dog to victory",
-    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
-    "featureExplore": "Explore the shared world map",
-    "featureBuild": "Build and defend doghouses",
-    "featureCompete": "Compete on daily quests",
-    "secondaryHint": "You can switch accounts later from the profile menu."
+    "heroEyebrow": "Unisciti al branco",
+    "heroHeadline": "Porta il tuo cane alla vittoria",
+    "heroSubtitle": "Accedi per lanciare incursioni, riparare cucce e scalare le classifiche.",
+    "featureExplore": "Esplora la mappa del mondo condivisa",
+    "featureBuild": "Costruisci e difendi cucce",
+    "featureCompete": "Competi in missioni giornaliere",
+    "secondaryHint": "Puoi cambiare account in seguito dal menu del profilo."
   }
 }
