--- a/src/i18n/ur.json
+++ b/src/i18n/ur.json
@@ -383,12 +383,12 @@
     }
   },
   "signIn": {
-    "heroEyebrow": "Join the pack",
-    "heroHeadline": "Lead your dog to victory",
-    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
-    "featureExplore": "Explore the shared world map",
-    "featureBuild": "Build and defend doghouses",
-    "featureCompete": "Compete on daily quests",
-    "secondaryHint": "You can switch accounts later from the profile menu."
+    "heroEyebrow": "پیک میں شامل ہوں",
+    "heroHeadline": "اپنے کتے کو فتح کی طرف لے جائیں",
+    "heroSubtitle": "حملے شروع کرنے، کتے کے گھروں کی مرمت کرنے اور لیڈر بورڈ پر چڑھنے کے لیے سائن ان کریں۔",
+    "featureExplore": "مشترکہ عالمی نقشہ دریافت کریں",
+    "featureBuild": "کتے کے گھر بنائیں اور ان کا دفاع کریں",
+    "featureCompete": "روزانہ کی تلاش میں مقابلہ کریں",
+    "secondaryHint": "آپ بعد میں پروفائل مینو سے اکاؤنٹس تبدیل کر سکتے ہیں۔"
   }
 }
