--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -320,7 +320,7 @@
       "healX3": "নিরাময় ×3",
       "attackX3": "আক্রমণ ×3",
       "addDoghouse": "কুকুর ঘর যোগ করুন",
-      "energyUsedAttackHeal": "-2 শক্তি আক্রমণের জন্য ব্যবহৃত • -1 নিরাময়ের জন্য",
+      "energyUsedAttackHeal": "-5 শক্তি আক্রমণের জন্য • -5 নিরাময়ের জন্য",
       "energyPerDay": "আপনার মালিকানাধীন প্রতিটি কুকুর ঘরের জন্য প্রতিদিন +1 শক্তি",
       "questPlaceDoghouse": "1টি কুকুর ঘর রাখুন",
       "questAttackEnemy": "একটি শত্রু কুকুর ঘর আক্রমণ করুন",
