--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -320,13 +320,83 @@
   "navProfile": "Perfil",
   "walkthrough": {
     "ui": {
+      "levelUp": "Level Up!",
+      "plusOneSkillPoint": "+1 skill point",
+      "place": "Place",
+      "healX3": "Heal ×3",
+      "attackX3": "Attack ×3",
+      "addDoghouse": "Add doghouse",
+      "energyUsedAttackHeal": "-5 de energía para atacar • -5 para curar",
+      "energyPerDay": "+1 energy/day for each doghouse you own",
+      "questPlaceDoghouse": "Place 1 doghouse",
+      "questAttackEnemy": "Attack an enemy doghouse",
+      "questHealOwn": "Heal your doghouse",
+      "premiumTitle": "Premium",
+      "premiumFeatures": "Premium dog icons • Unlimited renames",
+      "buy": "Buy",
+      "extraDoghouse": "Extra doghouse",
+      "renameToken": "Rename token",
+      "repairPack": "Repair pack",
+      "snacks": "Snacks"
+    },
+    "steps": {
+      "gainingExperience": {
+        "title": "Gaining Experience",
+        "desc": "Earn XP by placing your own doghouses and by attacking enemy doghouses. When you level up, you get skill points to make your dog stronger.",
+        "hint": "Turn on GPS and place houses a little apart from existing ones.",
+        "howto": [
+          "Bottom-left: tap the doghouse + button (doghouse icon with a small plus) to place a doghouse at your current location.",
+          "To attack: tap an enemy doghouse marker to open its panel, then tap Attack three times.",
+          "To heal: tap your own doghouse marker to open its panel, then tap Heal three times.",
+          "On Level Up: claim rewards, then open Dog view and assign your skill point."
+        ]
+      },
+      "energyMechanics": {
+        "title": "Energy Mechanics",
+        "desc": "Attacking and healing cost energy. Energy refills automatically: +1 per doghouse you own, each day.",
+        "hint": "Plan bigger battles when you have more energy or more owned doghouses.",
+        "howto": [
+          "Check your energy in the top-right lightning badge.",
+          "Attack spends energy; healing your own doghouse also spends energy.",
+          "Own more doghouses to increase your daily energy refill."
+        ]
+      },
+      "dailyQuests": {
+        "title": "Daily Quests and Leaderboards",
+        "desc": "Finish daily quests to earn rewards and see how you rank on the leaderboards.",
+        "hint": "Do a few quick quests every day to keep climbing.",
+        "howto": [
+          "Open Daily Quests to view today’s tasks and claim rewards after completing them.",
+          "Open Leaderboards to see your rank, scores, and how you compare to others."
+        ]
+      },
+      "premiumShop": {
+        "title": "Premium & Shop",
+        "desc": "Upgrade to Premium to unlock premium dog icons and unlimited name changes. In the Shop, buy Snacks (in-game currency) to get more doghouses, more name changes, and repair packs.",
+        "hint": "Premium customizes your identity; Snacks fuel progression.",
+        "howto": [
+          "Open Shop to view Premium and in-game offers.",
+          "Buy Premium to enable premium dog icons and unlimited renames for your dog and doghouses.",
+          "Purchase Snacks to get extra doghouses, rename tokens, and repair packs."
+        ]
+      }
+    },
+    "buttons": {
+      "back": "Back",
+      "next": "Next",
+      "done": "Done",
+      "close": "Close"
+    }
+  }
+  "walkthrough": {
+    "ui": {
       "levelUp": "¡Subida de nivel!",
       "plusOneSkillPoint": "+1 punto de habilidad",
       "place": "Colocar",
       "healX3": "Curar ×3",
       "attackX3": "Atacar ×3",
       "addDoghouse": "Añadir caseta de perro",
-      "energyUsedAttackHeal": "-2 de energía utilizada para atacar • -1 para curar",
+      "energyUsedAttackHeal": "-5 de energía para atacar • -5 para curar",
       "energyPerDay": "+1 de energía/día por cada caseta de perro que poseas",
       "questPlaceDoghouse": "Coloca 1 caseta de perro",
       "questAttackEnemy": "Ataca una caseta de perro enemiga",
