--- a/src/i18n/ur.json
+++ b/src/i18n/ur.json
@@ -320,7 +320,7 @@
       "healX3": "ٹھیک ×3",
       "attackX3": "حملہ ×3",
       "addDoghouse": "کتے کا گھر شامل کریں",
-      "energyUsedAttackHeal": "حملہ کے لیے -2 توانائی استعمال ہوئی • ٹھیک کرنے کے لیے -1",
+      "energyUsedAttackHeal": "حملہ کے لیے -5 توانائی • مرمت کے لیے -5",
       "energyPerDay": "آپ کے ہر کتے کے گھر کے لیے روزانہ +1 توانائی",
       "questPlaceDoghouse": "1 کتے کا گھر رکھیں",
       "questAttackEnemy": "دشمن کے کتے کے گھر پر حملہ کریں",
