--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -324,7 +324,7 @@
       "healX3": "ठीक करें ×3",
       "attackX3": "हमला ×3",
       "addDoghouse": "डॉगहाउस जोड़ें",
-      "energyUsedAttackHeal": "-2 ऊर्जा हमले के लिए उपयोग की गई • -1 ठीक करने के लिए",
+      "energyUsedAttackHeal": "-5 ऊर्जा हमले के लिए • -5 ठीक करने के लिए",
       "energyPerDay": "आपके स्वामित्व वाले प्रत्येक डॉगहाउस के लिए प्रति दिन +1 ऊर्जा",
       "questPlaceDoghouse": "1 डॉगहाउस रखें",
       "questAttackEnemy": "एक दुश्मन डॉगहाउस पर हमला करें",
