--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -359,10 +359,7 @@
         "title": "任务和排行榜",
         "desc": "完成每日任务以获得奖励。攀登排行榜，看看您与其他玩家的排名如何。",
         "hint": "每天登录以完成任务并保持排名。",
-        "howto": [
-          "转到“每日任务”选项卡以查看您的任务并获得奖励。",
-          "转到排行榜查看您的排名。"
-        ]
+        "howto": ["转到“每日任务”选项卡以查看您的任务并获得奖励。", "转到排行榜查看您的排名。"]
       },
       "premiumShop": {
         "title": "高级会员和商店",
