--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -335,7 +335,9 @@
       "extraDoghouse": "Niche supplémentaire",
       "renameToken": "Jeton de renommage",
       "repairPack": "Pack de réparation",
-      "snacks": "Friandises"
+      "snacks": "Friandises",
+      "questsTitle": "Quêtes",
+      "leaderboardsTitle": "Classements"
     },
     "steps": {
       "gainingExperience": {
