--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -331,7 +331,9 @@
       "extraDoghouse": "Casota extra",
       "renameToken": "Ficha de renomeação",
       "repairPack": "Pacote de reparação",
-      "snacks": "Snacks"
+      "snacks": "Snacks",
+      "questsTitle": "Quests",
+      "leaderboardsTitle": "Leaderboards"
     },
     "steps": {
       "gainingExperience": {
