Fix LevelUp translations

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -296,6 +296,12 @@
   "loading": "جارٍ التحميل ...",
   "loadingDailyQuests": "جارٍ تحميل المهام اليومية ...",
   "noQuestsToday": "لا توجد مهام متاحة اليوم",
+  "levelUp": {
+    "title": "🎉 ارتقيت بالمستوى! 🎉",
+    "reachedLevel": "لقد وصلت إلى المستوى {level}!",
+    "skillPointReward": "نقطة مهارة +1",
+    "doghouseReward": "منزل الكلاب +1"
+  },
   "claim": "مطالبة",
   "claimed": "تمت المطالبة به",
   "leaderboardTopLevels": "أعلى المستويات",
