--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -296,6 +296,12 @@
   "loading": " লোড হচ্ছে...",
   "loadingDailyQuests": "দৈনিক কোয়েস্ট লোড হচ্ছে...",
   "noQuestsToday": "আজ কোন কোয়েস্ট উপলব্ধ নেই",
+  "levelUp": {
+    "title": "🎉 লেভেল আপ! 🎉",
+    "reachedLevel": "আপনি {level} লেভেলে পৌঁছেছেন!",
+    "skillPointReward": "স্কিল পয়েন্ট +১",
+    "doghouseReward": "ডগহাউস +১"
+  },
   "claim": "দাবি করুন",
   "claimed": "দাবি করা হয়েছে",
   "leaderboardTopLevels": "শীর্ষ স্তর",
