--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -300,6 +300,12 @@
   "loading": " लोड हो रहा है...",
   "loadingDailyQuests": "दैनिक खोज लोड हो रही हैं...",
   "noQuestsToday": "आज कोई खोज उपलब्ध नहीं है",
+  "levelUp": {
+    "title": "🎉 लेवल अप! 🎉",
+    "reachedLevel": "आप लेवल {level} पर पहुंच गए हैं!",
+    "skillPointReward": "कौशल अंक +1",
+    "doghouseReward": "डॉगहाउस +1"
+  },
   "claim": "दावा करें",
   "claimed": "दावा किया गया",
   "leaderboardTopLevels": "शीर्ष स्तर",
