--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -296,6 +296,12 @@
   "loading": "Загрузка...",
   "loadingDailyQuests": "Загрузка ежедневных квестов...",
   "noQuestsToday": "Сегодня нет доступных квестов",
+  "levelUp": {
+    "title": "🎉 Новый уровень! 🎉",
+    "reachedLevel": "Ты достиг уровня {level}!",
+    "skillPointReward": "Очко навыка +1",
+    "doghouseReward": "Будка +1"
+  },
   "claim": "Забрать",
   "claimed": "Забрано",
   "leaderboardTopLevels": "Высшие уровни",
