10 energy restore translations

--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -350,7 +350,7 @@
       "attackX3": "Atak ×3",
       "addDoghouse": "Postaw budę",
       "energyUsedAttackHeal": "-5 energii na Atak • -5 na Naprawę",
-      "energyPerDay": "+1 energia/dzień za każdą posiadaną budę",
+      "energyPerDay": "+10 energii/dzień za każdą posiadaną budę",
       "questPlaceDoghouse": "Postaw 1 budę",
       "questAttackEnemy": "Zaatakuj wrogą budę",
       "questHealOwn": "Napraw swoją budę",
