--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -327,7 +327,7 @@
       "attackX3": "Атаковать ×3",
       "addDoghouse": "Добавить будку",
       "energyUsedAttackHeal": "-5 энергии на атаку • -5 на исцеление",
-      "energyPerDay": "+1 энергия/день за каждую вашу будку",
+      "energyPerDay": "+10 энергии/день за каждую вашу будку",
       "questPlaceDoghouse": "Разместите 1 будку",
       "questAttackEnemy": "Атакуйте вражескую будку",
       "questHealOwn": "Исцелите свою будку",
